The project came to an end, but more exiting ones are on coming.

--- a/services.html
+++ b/services.html
@@ -21,9 +21,9 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="services.html">Services</a></li>
+            <li class="active"><a href="services.html">Services</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -33,7 +33,7 @@
 
       <div class="starter-template">
         <h1>I am noding with bootstrap</h1>
-        <p class="lead">This is the welcoming page. Welcome :).</p>
+        <p class="lead">This is the servies page. </p>
       </div>
 
     </div>
