--- a/about.html
+++ b/about.html
@@ -21,8 +21,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -33,7 +33,7 @@
 
       <div class="starter-template">
         <h1>I am noding with bootstrap</h1>
-        <p class="lead">This is the welcoming page. Welcome :).</p>
+        <p class="lead">This is the about page. Nothing about me, tho :).</p>
       </div>
 
     </div>
